# hamilton_erp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_phases.md  coding_standards.md  conftest.py  current_state.md  decisions_log.md  hamilton_erp_build_specification.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/commands/: bug-triage.md  coverage.md  debug-env.md  deploy.md  feature.md  fix-and-test.md  hypothesis.md  load-test.md  mutmut.md  run-expert-tests.md  run-tests.md  start.md  status.md  task-start.md  task9-start.md
.claude/skills/frappe-v16/: SKILL.md
.claude/skills/hamilton-testing/: SKILL.md
.github/scripts/: sync_taskmaster_from_checklist.py
.github/workflows/: claude-review.yml  lint.yml  sync-taskmaster.yml  tests.yml
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
docs/: HAMILTON_LAUNCH_PLAYBOOK.md  HANDOFF.md  RUNBOOK.md  RUNBOOK_BACKUP.md  RUNBOOK_EMERGENCY.md  advanced_edge_case_tests.md  api_reference.md  build_phases.md  claude_memory.md  coding_standards.md  coding_standards_audit.md  current_state.md  decisions_log.md  feature_status.json  field_masking_audit.md  gap_analysis.md  hamilton_erp_build_specification.md  hamilton_pre_handoff_prompts.md  hooks_audit.md  inbox.md  lessons_learned.md  overnight_summary_2026-05-01.md  permissions_matrix.md  phase1_design.md  production_practices_audit.md  reference_links.md  review_package.md  review_prompts.md  review_synthesis.md  risk_register.md  task_25_checklist.md  testing_checklist.md  testing_guide.md  troubleshooting.md  venue_rollout_playbook.md  venue_website_prompts.md
docs/audits/: 2026-05-02_asset_assignment_failure_modes.md  2026-05-02_audit_log_coverage.md  2026-05-02_cash_handling_failure_modes.md  2026-05-02_payment_pos_failure_modes.md  2026-05-02_permissions_drift_audit.md  2026-05-02_pii_masking_coverage.md  ai_bloat_audit_2026-04-29.md  consistency_audit_2026_05.md  docs_maintenance_audit_items_13_17.md  fixtures_to_git_audit.md  frappe_skills_audit_2026-05-04.md  in_test_flags_audit.md  permissions_cluster_audit_items_1_6.md  pos_business_process_gap_audit.md  security_hardening_audit_2026-05-04.md  security_review_2026_05_full_codebase.md  string_comparison_audit.md  tier_0_readiness_2026_05.md
docs/design/: V10_CANONICAL_MOCKUP.html  V9.1_RETAIL_AMENDMENT.md  V9_CANONICAL_MOCKUP.html  asset_board_mockup_v7.html  asset_board_ui.md  canonical_mockup_manifest.json  cash_reconciliation_phase3.md  data_model.md  manager_override_phase2.md  phase2_multivenue_plan.md  pos_hardware_spec.md  pos_scanner_spec.md  post_close_integrity_phase1.md  refunds_phase2.md  tip_pull_phase2.md  v9_integration_plan.md  voids_phase1.md
docs/design/archive/: v9_integration_plan.md
docs/inbox/: 2026-05-04_audit_synthesis_decisions.md  production_handoff_audit_merged_2026-04-25.md  prompt1_production_audit_2026-04-25.md
docs/inbox/archive/: audit_review_findings_2026-04-25.md  prompt5_handoff_audit_2026-04-25.md
docs/operations/: frappe_cloud_update_policy.md
docs/research/: erpnext_hardware_field_reports.md  erpnext_pos_business_process_gotchas.md  hamilton_backup_processor_evaluation.md  hst_cra_mapping.md  label_printer_evaluation_2026_05.md  merchant_processor_comparison.md  pipeda_venue_session_pii.md  pos_business_process_gap_analysis.md  quickbooks_chart_of_accounts_1742279.csv  receipt_printer_evaluation_2026_05.md
docs/retrospectives/: 2026-04-28.md
docs/reviews/: review_task25_blind.md  review_task25_context.md  v8_review_prompt.md
docs/runbooks/: backup_restore_drill.md  fresh_site_install.md  launch_day_rehearsal.md
docs/superpowers/plans/: 2026-04-10-phase1-asset-board-and-session-lifecycle.md
docs/test_plans/: phase1_blockers_browser_tests.md
docs/training/: manager_manual.md  operator_manual.md
hamilton_erp/: api.py  hooks.py  integrity_checks.py  lifecycle.py  locks.py  modules.txt  patches.txt  printing.py  realtime.py  tasks.py  test_additional_expert.py  test_admin_correction.py  test_adversarial.py  test_api_phase1.py  test_asset_board_rendering.py  test_bulk_clean.py  test_canonical_mockup_governance.py  test_checklist_complete.py  test_comp_admission_endpoint.py  test_database_advanced.py  test_e2e_phase1.py  test_environment_health.py  test_extreme_edge_cases.py  test_frappe_edge_cases.py  test_fresh_install_conformance.py  test_governance_test_presence.py  test_helpers.py  test_hypothesis.py  test_integrity_checks.py  test_lifecycle.py  test_load_10k.py  test_locks.py  test_oos_duration_tracking.py  test_receipt_printing.py  test_restock_item.py  test_retail_sales_invoice.py  test_security_audit.py  test_seed_patch.py  test_shift_management.py  test_stress_simulation.py  (+3 more)
hamilton_erp/fixtures/: custom_docperm.json  custom_field.json  role.json
hamilton_erp/hamilton_erp/doctype/asset_status_log/: asset_status_log.js  asset_status_log.json  asset_status_log.py  test_asset_status_log.py
hamilton_erp/hamilton_erp/doctype/cash_drop/: cash_drop.js  cash_drop.json  cash_drop.py  test_cash_drop.py
hamilton_erp/hamilton_erp/doctype/cash_reconciliation/: cash_reconciliation.js  cash_reconciliation.json  cash_reconciliation.py  test_cash_reconciliation.py
hamilton_erp/hamilton_erp/doctype/cash_sale_idempotency/: cash_sale_idempotency.json  cash_sale_idempotency.py
hamilton_erp/hamilton_erp/doctype/comp_admission_log/: comp_admission_log.js  comp_admission_log.json  comp_admission_log.py  (+1 more)
hamilton_erp/overrides/: sales_invoice.py
hamilton_erp/patches/v0_1/: rename_glory_hole_to_gh_room.py  seed_canadian_nickel_rounding.py  seed_hamilton_accounting.py  seed_hamilton_env.py  seed_hamilton_price_list.py  seed_pr51_audit_fixes.py
hamilton_erp/public/css/: asset_board.css
hamilton_erp/public/js/: sales_invoice_extensions.js
hamilton_erp/scripts/: __init__.py  saturday_night_sim.py  seed_square_catalog.py  seed_test_fixtures.py
hamilton_erp/setup/: install.py
scripts/: debug-redis.sh  init.sh  mutation_test.py
(+29 files in other folders)
