[project]
name = "hamilton_erp"
authors = [
	{ name = "Chris Srnicek" }
]
description = "Custom Frappe app extending ERPNext for Club Hamilton — asset board, session lifecycle, and blind cash control."
requires-python = ">=3.14,<3.15"
readme = "README.md"
dynamic = ["version"]
# Runtime dependencies. Per security audit S4.4 (2026-05-04), this list was
# previously empty, blocking pip-audit / SBOM analysis. Add new runtime deps
# here as the surface grows.
#   - python-escpos: ESC/POS receipt rendering for the Epson TM-T20III. See
#     DEC-098 (receipt printing) and docs/inbox.md → Receipt printing.
dependencies = [
    "python-escpos>=3.0",
]

[project.optional-dependencies]
# Test-only deps — installed in CI via `pip install -e ".[test]"` and locally
# via /hypothesis slash command. Not runtime requirements; kept out of
# `dependencies` so production installs stay lean.
test = ["hypothesis"]

[tool.bench.frappe-dependencies]
# DEC-092 / S4.4: Frappe and ERPNext are declared here (Frappe's bench-only
# convention, honoured by `bench install-app`) and NOT in [project] dependencies.
# Standard Python supply-chain tooling (pip-audit, safety, Dependabot) does not
# parse this section, so an empty [project] dependencies array can silently
# pass a CVE scan. Hamilton's mitigation is a CI step that runs
# `pip list --format=json` from inside the bench venv and pipes the output
# into `pip-audit` — see DEC-092 for the audit signal source.
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["hamilton_erp"]
# Skip threading-heavy tests that need bench run-tests (Frappe thread-local init)
addopts = "-k 'not (test_A4_twenty_threads or test_adversarial or test_load_10k or test_second_acquisition_raises or test_concurrent_start_session or test_stress_simulation or test_only_one_of_two_concurrent or test_frappe_in_test_flag)'"

[tool.mutmut]
paths_to_mutate = ["hamilton_erp/lifecycle.py", "hamilton_erp/locks.py"]
tests_dir = ["/Users/chrissrnicek/hamilton_erp/hamilton_erp/"]
also_copy = ["conftest.py"]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
# DEC-084 / S3.4: `S` (flake8-bandit) added so unsafe-deserialization,
# subprocess-with-shell, weak-crypto, hardcoded-password, and assert-in-prod
# patterns get caught at lint time. Pre-existing S findings in operational
# code are NOT auto-fixed in this PR — triage happens in a follow-up sweep.
# Until then, the per-file-ignores below silence S101 in tests (asserts are
# legitimate there) and the few other patterns the codebase uses today.
select = ["F", "E", "W", "I", "S"]
# E501: line-too-long (Frappe convention allows long lines).
# W191 + E101: tab-indentation rules — Frappe convention is tabs (also declared
# by [tool.ruff.format] indent-style = "tab" below). Lint flagging tabs while
# format requires tabs is a contradiction; suppress the lint warnings.
# S101: assert-in-prod is suppressed globally because Frappe convention uses
# `assert` in many places; the test suite uses it heavily. The narrower per-
# file scoping was discarded because Frappe app code itself uses asserts in
# patches and one-off scripts.
# S311: pseudo-random use is acceptable for non-cryptographic contexts (Hamilton
# uses random for retail-cart UI ordering, never for tokens or session IDs).
ignore = ["E501", "W191", "E101", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
# DEC-084 / S3.4 follow-up. Tests legitimately use dummy creds (S105/S106)
# for fixtures and may launch subprocess for bench helpers (S603/S607).
"test_*.py" = ["S105", "S106", "S603", "S607"]
"conftest.py" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
